tests/accept/four.ul
int foo(){
int    x;
int[4] y; 
x = 2+3+5*5;
y[0] = x;
}
