tests/reject/notfive.ul
string foo(int[3] x)
{
	char[3] c;
	c[0] = 'b'
	c[1] = 'a';
	c[2] = 'd';
}
